wahoo more changes

--- a/src/main/resources/assets/civilized_weapons/lang/en_us.json
+++ b/src/main/resources/assets/civilized_weapons/lang/en_us.json
@@ -88,12 +88,10 @@
   "sounds.civilized_weapons.spin_swoosh_sound": "Duelblade Spins",
   "sounds.civilized_weapons.spear_hit_sound": "Weapon Stabs",
   "sounds.civilized_weapons.flail_swing_sound": "Flail Swings",
-  "enchantment.civilized_weapons.dummy": "Dummy Enchantment",
-  "enchantment.civilized_weapons.dummy.desc": "A dumb little enchantment",
   "enchantment.civilized_weapons.sequence": "Sequence",
   "enchantment.civilized_weapons.sequence.desc": "Charged hits speed up attack speed, with the maximum being six hits",
   "enchantment.civilized_weapons.retreat": "Retreat",
-  "enchantment.civilized_weapons.retreat.desc": "Using your weapon will boost you backwards",
+  "enchantment.civilized_weapons.retreat.desc": "Using your weapon will boost you backwards, granting strength",
   "enchantment.civilized_weapons.jousting": "Jousting",
   "enchantment.civilized_weapons.jousting.desc": "Gain extra armor piercing damage while riding on a horse",
   "enchantment.civilized_weapons.sunstrike": "Sunstrike",
@@ -105,7 +103,7 @@
   "enchantment.civilized_weapons.pursuer": "Pursuer",
   "enchantment.civilized_weapons.pursuer.desc": "Sprint hitting will boost movement speed, stacking up to six times.",
   "enchantment.civilized_weapons.groundslam": "Ground Slam",
-  "enchantment.civilized_weapons.groundslam.desc": "When falling more than three blocks and preforming a critical hit, a shockwave will form, damaging surrounding enemies. Shockwave radius increases with blocks fallen.",
+  "enchantment.civilized_weapons.groundslam.desc": "Sprinting and hitting will form a shockwave, damaging surrounding enemies.",
   "enchantment.civilized_weapons.retribution": "Retribution",
   "enchantment.civilized_weapons.retribution.desc": "Gain attack speed with health missing",
   "enchantment.civilized_weapons.chargeofjustice": "Charge of Justice",
@@ -115,9 +113,9 @@
   "enchantment.civilized_weapons.whisperingstars": "Whispering Stars",
   "enchantment.civilized_weapons.whisperingstars.desc": "On hit, blinds players in a radius and weakens other mobs",
   "enchantment.civilized_weapons.drawrush": "Draw Rush",
-  "enchantment.civilized_weapons.drawrush.desc": "Upon using your weapon, you will gain a short burst of attack damage",
+  "enchantment.civilized_weapons.drawrush.desc": "Receiving damage grants momentary strength boost. Small cooldown",
   "enchantment.civilized_weapons.aerialstrike": "Aerial Strike",
-  "enchantment.civilized_weapons.aerialstrike.desc": "Sweep attacks pull down enemies and applies additional damage to entities in mid air",
+  "enchantment.civilized_weapons.aerialstrike.desc": "attacks pull down enemies and applies additional damage to entities in mid air",
   "enchantment.civilized_weapons.firespin": "Fire Spin",
   "enchantment.civilized_weapons.firespin.desc": "Spin attacks set targets on fire",
   "enchantment.civilized_weapons.foolish": "Foolish",
@@ -129,7 +127,7 @@
   "enchantment.civilized_weapons.execution": "Execution",
   "enchantment.civilized_weapons.execution.desc": "Falling from high heights adds damage",
   "enchantment.civilized_weapons.hugeswing": "Huge Swing",
-  "enchantment.civilized_weapons.hugeswing.desc": "Deals much more damage while target is above 80% health",
+  "enchantment.civilized_weapons.hugeswing.desc": "Deals much more damage if target has more than 20 max health",
   "enchantment.civilized_weapons.locked": "Locked",
   "enchantment.civilized_weapons.locked.desc": "Hitting the same target stacks damage but also slows attacks",
   "enchantment.civilized_weapons.trustworthy": "Trustworthy",
@@ -145,7 +143,7 @@
   "effect.civilized_weapons.add_weakness_effect": "Added Weakness",
   "effect.civilized_weapons.add_slowness_effect": "Added Slowness",
   "effect.civilized_weapons.add_attack_damage_effect": "Added Attack Damage",
-  "effect.civilized_weapons.add_speed_effect": "Added Speed",
+  "effect.civilized_weapons.add_speed_effect": "Added Movement Speed",
   "effect.civilized_weapons.sunstrike_effect": "Sun Strike",
 
   "pack.civilized_weapons.betterend_compat_text": "Recipes for Betterend Civilized Weapons",
