--- a/src/main/resources/assets/civilized_weapons/lang/en_us.json
+++ b/src/main/resources/assets/civilized_weapons/lang/en_us.json
@@ -107,7 +107,7 @@
   "enchantment.civilized_weapons.retribution": "Retribution",
   "enchantment.civilized_weapons.retribution.desc": "Gain attack speed with health missing",
   "enchantment.civilized_weapons.chargeofjustice": "Charge of Justice",
-  "enchantment.civilized_weapons.chargeofjustice.desc": "Sprint hitting boosts attack speed for a short time",
+  "enchantment.civilized_weapons.chargeofjustice.desc": "Sprint hitting deals 2 more damage but also throws the user backwards",
   "enchantment.civilized_weapons.ascend": "Ascend",
   "enchantment.civilized_weapons.ascend.desc": "Launches targets up when hit by spin attacking",
   "enchantment.civilized_weapons.whisperingstars": "Whispering Stars",
@@ -134,6 +134,8 @@
   "enchantment.civilized_weapons.trustworthy.desc": "Holding your weapon for a while will grant an attack speed boost",
   "enchantment.civilized_weapons.defender": "Defender",
   "enchantment.civilized_weapons.defender.desc": "Attacking the air with this item will parry oncoming arrows",
+  "enchantment.civilized_weapons.lightweight": "Lightweight",
+  "enchantment.civilized_weapons.lightweight.desc": "Makes Twohanded weapons Onehanded. Weapon attack damage is reduced by 1",
   "death.attack.armorpiercingdamage": "%1$s got sliced!",
   "death.attack.layereddamage": "%1$s was poked too hard!",
   "death.attack.slashdamage": "%1$s got slashed!",
