--- a/src/main/resources/assets/civilized_weapons/lang/en_us.json
+++ b/src/main/resources/assets/civilized_weapons/lang/en_us.json
@@ -95,7 +95,7 @@
   "enchantment.civilized_weapons.jousting": "Jousting",
   "enchantment.civilized_weapons.jousting.desc": "Gain extra armor piercing damage while riding on a horse",
   "enchantment.civilized_weapons.sunstrike": "Sunstrike",
-  "enchantment.civilized_weapons.sunstrike.desc": "Apply sun strike effect to enemies on sweep-hit, damaging enemies that are exposed to the sun when the effect runs out.",
+  "enchantment.civilized_weapons.sunstrike.desc": "Apply sun strike effect to enemies on sweep-hit, damaging enemies that are exposed to the sun when the effect runs out. Always active in the nether.",
   "enchantment.civilized_weapons.verticality": "Verticality",
   "enchantment.civilized_weapons.verticality.desc": "Boosts vertical knockback",
   "enchantment.civilized_weapons.largespin": "Large Spin",
@@ -107,21 +107,19 @@
   "enchantment.civilized_weapons.retribution": "Retribution",
   "enchantment.civilized_weapons.retribution.desc": "Gain attack speed with health missing",
   "enchantment.civilized_weapons.chargeofjustice": "Charge of Justice",
-  "enchantment.civilized_weapons.chargeofjustice.desc": "Sprint hitting deals 2 more damage but also throws the user backwards",
+  "enchantment.civilized_weapons.chargeofjustice.desc": "Adds 1 damage but hits launch you backwards.",
   "enchantment.civilized_weapons.ascend": "Ascend",
   "enchantment.civilized_weapons.ascend.desc": "Launches targets up when hit by spin attacking",
   "enchantment.civilized_weapons.whisperingstars": "Whispering Stars",
   "enchantment.civilized_weapons.whisperingstars.desc": "On hit, blinds players in a radius and weakens other mobs",
-  "enchantment.civilized_weapons.drawrush": "Draw Rush",
-  "enchantment.civilized_weapons.drawrush.desc": "Receiving damage grants momentary strength boost. Small cooldown",
+  "enchantment.civilized_weapons.rhythm": "Rhythm",
+  "enchantment.civilized_weapons.rhythm.desc": "Receiving damage grants momentary strength boost. Small cooldown",
   "enchantment.civilized_weapons.aerialstrike": "Aerial Strike",
   "enchantment.civilized_weapons.aerialstrike.desc": "attacks pull down enemies and applies additional damage to entities in mid air",
   "enchantment.civilized_weapons.firespin": "Fire Spin",
   "enchantment.civilized_weapons.firespin.desc": "Spin attacks set targets on fire",
   "enchantment.civilized_weapons.foolish": "Foolish",
   "enchantment.civilized_weapons.foolish.desc": "Hit targets gain speed but are weakened",
-  "enchantment.civilized_weapons.againstodds": "Against Odds",
-  "enchantment.civilized_weapons.againstodds.desc": "When three or more enemies are close, gain additional attack damage for each one",
   "enchantment.civilized_weapons.hasty": "Hasty",
   "enchantment.civilized_weapons.hasty.desc": "Fast attacks will set the target on fire",
   "enchantment.civilized_weapons.execution": "Execution",
@@ -136,6 +134,8 @@
   "enchantment.civilized_weapons.defender.desc": "Attacking the air with this item will parry oncoming arrows",
   "enchantment.civilized_weapons.lightweight": "Lightweight",
   "enchantment.civilized_weapons.lightweight.desc": "Makes Twohanded weapons Onehanded. Weapon attack damage is reduced by 1",
+  "enchantment.civilized_weapons.multitarget": "Multitarget",
+  "enchantment.civilized_weapons.multitarget.desc": "Nearby enemies of the same type of the hit entity will be damaged by half your weapon's attack damage",
   "death.attack.armorpiercingdamage": "%1$s got sliced!",
   "death.attack.layereddamage": "%1$s was poked too hard!",
   "death.attack.slashdamage": "%1$s got slashed!",
