Ascend Enchantment and Fix Critical and no crit on kikuri

--- a/src/main/resources/assets/civilized_weapons/lang/en_us.json
+++ b/src/main/resources/assets/civilized_weapons/lang/en_us.json
@@ -67,7 +67,7 @@
   "tooltip.civilized_weapons.SweepDamage.tooltip": "%s Sweep Damage",
   "tooltip.civilized_weapons.HalberdDisableShield.tooltip": "Disables Shields When Sprinting",
   "tooltip.civilized_weapons.SickleKnockback.tooltip": "Very Low Knockback",
-  "tooltip.civilized_weapons.SpearCharge.tooltip": "Deals 1.6x Damage When Sprinting",
+  "tooltip.civilized_weapons.SpearCharge.tooltip": "Deals 1.4x Damage When Sprinting. Stacks with Critical Hits",
   "tooltip.civilized_weapons.TwoHanded.tooltip": "TwoHanded",
   "sounds.civilized_weapons.cast_iron_pan_sound": "Metal Slams",
   "sounds.civilized_weapons.heavy_thick_swoosh_sound": "Heavy Weapon Swings",
@@ -75,7 +75,7 @@
   "sounds.civilized_weapons.hefty_swoosh_sound": "Hefty Weapon Swings",
   "sounds.civilized_weapons.thin_swoosh_sound": "Thin Weapon Swings",
   "sounds.civilized_weapons.light_swoosh_sound": "Light Weapon Swings",
-  "sounds.civilized_weapons.spin_swoosh_sound": "dualblade Spins",
+  "sounds.civilized_weapons.spin_swoosh_sound": "Dualblade Spins",
   "sounds.civilized_weapons.spear_hit_sound": "Weapon Stabs",
   "sounds.civilized_weapons.flail_swing_sound": "Flail Swings",
   "enchantment.civilized_weapons.sequence": "Sequence",
@@ -137,6 +137,7 @@
   "effect.civilized_weapons.add_attack_damage_effect": "Added Attack Damage",
   "effect.civilized_weapons.add_speed_effect": "Added Movement Speed",
   "effect.civilized_weapons.sunstrike_effect": "Sun Strike",
+  "soundCategory.weapon_swing": "Civilized Weapons Swing",
 
   "pack.civilized_weapons.betterend_compat_text": "Recipes for Betterend Civilized Weapons",
   "pack.civilized_weapons.spectrum_compat_text": "Recipes for Spectrum Civilized Weapons",
